// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-document-type should delete a document type 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`delete-document-type should handle non-existent document type 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"Not Found","status":404,"detail":"The specified document type was not found","operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
